[project]
name = "rossmann-forecasting-benchmark"
version = "0.1.0"
description = "Rossmann Store Forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]
